# formak

./: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  WORKSPACE  eigen.BUILD  gtest.BUILD  rapidcheck.BUILD  requirements.in  requirements_dev.txt  requirements_lock.txt  sanitizer_ignorelist.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  demo.yml  docs.yml  feature_test.yml
actions/: check_repro.bash  ci.bash  feature_test.bash  format.bash  lint.bash  pip_setup.bash  test.bash  tidy.bash
benchmarks/: BUILD
benchmarks/python_library_for_model_evaluation/: compilation_performance_test.py
common/: BUILD  README.md  proselint.json  setup.cfg
config/: BUILD.bazel  rules_cc_toolchain_config.BUILD  rules_cc_toolchain_config_repository.bzl
cpp/: BUILD
cpp/include/formak/: innovation_filtering.h
cpp/runtime/: BUILD
cpp/runtime/test/: ManagedFilterNoCalibration_test.cpp  ManagedFilterNoControl_test.cpp  ManagedFilter_test.cpp
cpp/src/utils/: microbenchmark.cpp
cpp/test/: innovation_filtering_test.cpp
cpp/test/utils/: microbenchmark_test.cpp  stats_test.cpp  type_checks_test.cpp
data/NASA_2020-10_DDL-F1_Flight1_Catered_Dataset-20201013/: exploration.py
demo/: BUILD
demo/src/: ekf.py  graph_editing.py  orbital_model.py  physical_units.py  symbolic_model.py
designs/: formak_v0.md  python_library_for_model_evaluation.md  python_ui_demo.md  sklearn-integration.md
docs/: .gitignore  Makefile  concepts.md  conf.py  development-status.md  faq.md  getting-started.md  index.md  index.rst  make.bat  runtime.md  thinking-with-bazel.md  thinking-with-formak.md  whats-new.md
docs/apidocs/: index.rst
docs/apidocs/formak/: formak.cpp.rst  formak.python.rst  formak.rst  formak.ui.rst  formak.ui_model.rst
docs/designs/: calibration.md  cpp_library_for_model_evaluation.md  cse.md  experiment_superoptimizer.md  formak_v0.md  generate_cpp_from_ast.md  hyperparameter_selection.md  index.md  innovation_filtering.md  python_library_for_model_evaluation.md  python_ui_demo.md  reference_model_strapdown_imu.md  rollback_netcode.md  runtime.md  sklearn-integration.md
docs/formak/: ast_tools.md  index.md  language_support.md
experimental/: BUILD
experimental/include/experimental/: hello_greet.h
experimental/src/: ast_compile.py  coffman_graham.py  cpp_gen.py  dcmatrix.py  dump_simplify01.txt  dump_simplify02.txt  dump_simplify03.txt  extract_graph_patterns.py  graph_editing.py  graphviz_demo.py  hello_greet.cpp  hello_greet.py  hello_world.cpp  hello_world.py  linear_cpu_model.py  pstats_simplify.prof  pstats_simplify_3_12.prof  py_to_cpp_codegen.py  quaternions.py  simplify.py  superoptimizer.py  types_analogy.py  types_containing_tuples.py  types_matching_tuples.py
experimental/templates/: basic_class.cpp  basic_class.h
experimental/test/: codegen_output_test.cpp  cpp_gen_test.cpp  hello_test.cpp  hello_test.py  hypothesischeck_test.py  py_to_cpp_codegen_test.py  rapidcheckcheck.cpp  superoptimizer_test.py
featuretests/: BUILD  test_deps.bzl
featuretests/ast_code_generation/: BUILD  ast_test.cpp  components_test.py  generator.py
featuretests/common_subexpression_elimination/: BUILD  common.py  gen_cse.py  gen_no_cse.py  simple_test.cpp  simple_test.py
featuretests/cpp_library_for_model_evaluation/: BUILD  generator.py  generator_ekf.py  simple_test.cpp  simple_to_ekf_test.cpp
featuretests/hyperparameter_tuning/: BUILD  data.py  model.py  synthetic_data_test.py
featuretests/innovation_filtering/: BUILD  generator.py  nonlinear_test.cpp  nonlinear_test.py
featuretests/managed_filter/: BUILD  generator.py  tick_interface_test.cpp  tick_interface_test.py  tick_overhead_test.cpp
featuretests/python_library_for_model_evaluation/: BUILD  compilation_performance_test.py  simple_compilation_test.py  simple_test.py  simple_to_ekf_test.py
featuretests/python_ui_demo/: BUILD  orbital_test.py  simple_test.py
featuretests/reference_model_strapdown_imu/: BUILD  NASA_preignition.csv  NASA_sample.csv  model_definition.py  preignition_test.py  reference_model_test.py  small_test.py
featuretests/rocket_model/: BUILD  ekf_cpp_test.py  ekf_py_test.py  ekf_test.cpp  generator.py  model_cpp_test.py  model_definition.py  model_py_test.py  simple_ekf_test.py  simple_model_test.py  simple_test.py
featuretests/rollback_netcode/: BUILD  rollback_interface_test.py  tick_interface_test.cpp  tick_interface_test.py
featuretests/scikit_learn_integration/: BUILD  pipeline_test.py  simple_regression_test.py  ui_test.py
featuretests/test/: python_ui_demo_orbital_test.py  python_ui_demo_simple_test.py
formak/: BUILD
formak/src/formak/: py.py  python.py  ui.py
languagesupport/cpp/: BUILD  cpp11.cpp  cpp14.cpp  cpp17.cpp
py/: BUILD  CHANGES.md  README.md  defs.bzl
py/formak/: ast_fragments.py  ast_tools.py  common.py  cpp.py  exceptions.py  microbenchmark.py  python.py  rotation.py  runtime.py  state_machine.py  ui.py  ui_model.py  ui_state_machine.py
py/formak/reference_models/: strapdown_imu.py
py/formak/runtime/: __init__.py  common.py  managed_filter.py  managed_rollback.py  storage.py
py/private/: README.md  formak_gen.bzl  suite.bzl
py/test/: python_test.py  ui_test.py
toolchain/: BUILD  cc_toolchain.bzl  cc_toolchain_config.bzl  clang_llvm_15_00_06_x86_64_linux_gnu_ubuntu_18_04.BUILD  debian_stretch_amd64_sysroot.BUILD  rules_cc_toolchain_deps.bzl
toolchain/hermetic_cc_toolchain/: BUILD.bazel  cc_toolchain_import.bzl  sysroot.bzl  toolchain_config.bzl
toolchain/hermetic_cc_toolchain/features/: BUILD.bazel  features.bzl
toolchain/hermetic_cc_toolchain/wrappers/: BUILD
toolchain/hermetic_cc_toolchain/wrappers/posix/: ar  gcov  ld  llvm-cov  nm  objcopy  objdump  strip
tools/: BUILD
(+75 files in other folders)
